--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     font-family: 'Gloria Hallelujah', cursive;
 }
 
@@ -10,11 +10,13 @@ body {
     height: 100vh;
     background-color: #c2c2c2;
 }
+
 header h1 {
     text-align: center;
     color: #333;
 }
-ul {
+
+.list {
     border-radius: 8px;
     list-style-type: none;
     padding: 10px;
@@ -23,26 +25,29 @@ ul {
     background-color: #f0f0f0;
     width: 200px;
     height: auto;
-    transition: transform 
+    transition: transform
 }
+
 li {
     font-weight: bold;
     color: green;
     margin: 5px 0;
     border-radius: 8px;
 }
+
 li:hover {
     transform: scale(1.2);
     background-color: #f0f0f0;
     box-shadow: 0 9px 47px 11px rgba(51, 51, 51, 0.18);
     padding: 10px;
-  }
+}
 
-  @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     header h1 {
         font-size: 1.5em;
     }
+
     li {
         font-size: 13px;
     }
-  }
+}
